using binary tree